	- Introduce /etc/portage/package.slot_upgrade_{allow,forbid}
	  to allow exceptions from the general UPGRADE_TO_HIGHEST_SLOT policy.
	  This can be used as manual workaround for the missing dependency
	  resolving which will never be available in eix. See
	  http://bugs.gentoo.org/show_bug.cgi?id=236036
	- Fix scripts to use proper printf instead of echo.
	- Introduce MARK_UPGRADE.
	- Introduce <fullbest...> format.
	- Introduce <bestslotsupgrade...> (and <fullbestslotsupgrade...>)
	  format as a reaction to several requests, the latest being
	  http://forums.gentoo.org/viewtopic-t-278819-start-393.html
	  But please please note that if you use this in a script to call
	  emerge you are almost surely doing something wrong.
	  See the manpage for more details.
	- Fix typo in name --with-ebuild-sh-default

*eix-0.14.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support sets in masks or sets; provide RECURSIVE_SETS.
	- Provide --installed-unstable, --installed-testing, --installed-masked
	  see http://bugs.gentoo.org/show_bug.cgi?id=240010
	- Make EIX_LOCAL_SETS a list of directories.
	- Fix visible output of cache methods metadata/flat, see
	  http://bugs.gentoo.org/show_bug.cgi?id=240038
	- Introduce ./configure --with-ebuild-sh-default and
	  EXEC_EBUILD, EXEC_EBUILD_SH, EBUILD_DEPEND_TEMP to allow
	  customization to nonstandard paths, see
	  http://bugs.gentoo.org/show_bug.cgi?id=240460
	  Default is autodetection which works in the above case.
	- Remove EPREFIX_PORTAGE_EXEC (except for delayed substitution
	  for the above new variables).
	- Be extremely careful about vfork() usage to fix segfault from
	  http://bugs.gentoo.org/show_bug.cgi?id=240460
	- New cache methods repo-* support paludis' path scheme.
	- Be more verbose on execution failures for update-eix.

*eix-0.14.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support for PROPERTIES and RESTRICT.
	- Inquire sqlite database more flexible. This should fix