@@ -12,6 +12,7 @@
 
 #include <iostream>
 #include <map>
+#include <vector>
 
 /** A class for using ANSI markers
  * Example:
@@ -23,28 +24,45 @@
 class AnsiMarker {
 
 	public:
-		/** The various colors, acNone is the default color */
-		enum Marker { amNone=0, amBold=1, amUnderlined=4, amBlink=5, amInverse=7 };
-		Marker mk;
+		/** The various markers, amNone is no marker */
+		enum Marker { amNone=0, amBold=1, amUnderlined=4, amBlink=5, amInverse=7, amIllegal };
+		std::vector<Marker> markers;
+		bool have_something;
+		std::string string_begin;
 
-		AnsiMarker(const Marker m = amNone) : mk(m) { }
+		AnsiMarker(const Marker m = amNone)
+		{
+			if(m != amNone) {
+				markers.assign(1, m);
+				calc_string();
+			}
+		}
+
+		void calc_string()
+		{
+			have_something = false;
+			string_begin.clear();
+			for(std::vector<Marker>::const_iterator it = markers.begin();
+				it != markers.end(); ++it) {
+				if(*it == amNone)
+					continue;
+				static const int len = 20;
+				char buf[len];
+				snprintf(buf, len, "\x1B[%dm", int(*it));
+				string_begin.append(buf);
+				have_something = true;
+			}
+		}
 
 		static const char *reset()
 		{ return "\x1B[0m"; }
 
-		std::string asString()
+		const std::string &asString() const
+		{ return string_begin; }
+
+		const char *end() const
 		{
-			static const int len = 100;
-			char buf[len];
-			if( mk!=amNone ) {
-				snprintf(buf, len, "\x1B[%dm", int(mk));
-			}
-			else buf[0]='\0';
-			return std::string(buf);
-		}
-		std::string end()
-		{
-			if(mk!=amNone)
+			if(have_something)
 				return reset();
 			return "";
 		}
@@ -52,6 +70,7 @@ class AnsiMarker {
 		static std::map<std::string,AnsiMarker::Marker>& init_map_once()
 		{
 			static std::map<std::string,AnsiMarker::Marker> marker_map;
+			marker_map[""]        = AnsiMarker::amNone;
 			marker_map["none"]    = AnsiMarker::amNone;
 			marker_map["bold"]    = AnsiMarker::amBold;
 			marker_map["underline"] = AnsiMarker::amUnderlined;
@@ -62,26 +81,44 @@ class AnsiMarker {
 			return marker_map;
 		}
 
-		static Marker name_to_marker(std::string name)
+		static Marker name_to_marker(const std::string &name)
 		{
 			static std::map<std::string,AnsiMarker::Marker> &marker_map = init_map_once();
-			return marker_map[name];
+			std::map<std::string,AnsiMarker::Marker>::const_iterator f = marker_map.find(name);
+			if(f != marker_map.end())
+				return f->second;
+			return amIllegal;
 		}
 
 		/** Prints the current marker to an ostream */
 		friend std::ostream& operator<< (std::ostream& os, AnsiMarker am);
 
-		AnsiMarker(std::string marker_name) throw (ExBasic)
+		void initmarker(const std::string &markers_string) throw (ExBasic)
 		{
-			mk = name_to_marker(marker_name);
+			markers.clear();
+			std::vector<std::string> v = split_string(markers_string, ",;:- \t\r\n");
+			markers.assign(v.size(), amNone);
+			std::vector<Marker>::size_type i = 0;
+			for(std::vector<std::string>::const_iterator it = v.begin();
+				it != v.end(); ++it) {
+				Marker mk = name_to_marker(*it);
+				if(mk == amIllegal) {
+					mk = amNone;
+					throw ExBasic("Illega marker name %r") % *it;
+				}
+				markers[i++] = mk;
+			}
+			calc_string();
 		}
+
+		AnsiMarker(const std::string &markers_string)
+		{ initmarker(markers_string); }
 };
 
 inline std::ostream&
 operator<< (std::ostream& os, AnsiMarker am)
 {
-	if( am.mk != AnsiMarker::amNone )
-		os << "\x1B[" << int(am.mk) << 'm';
+	os << am.string_begin;
 	return os;
 }
 
@@ -96,8 +133,8 @@ operator<< (std::ostream& os, AnsiMarker am)
 class AnsiColor {
 
 	public:
-		/** The various colors, acNone is the default color */
-		enum Color { acNone=-1, acDefault=0, acBlack=30, acRed, acGreen, acYellow, acBlue, acPurple, acCyan, acGray };
+		/** The various colors; acDefault is the default color, acNone is no color change */
+		enum Color { acDefault=0, acBlack=30, acRed, acGreen, acYellow, acBlue, acPurple, acCyan, acGray, acNone, acIllegal };
 
 		/** The current color */
 		Color fg;
@@ -105,41 +142,53 @@ class AnsiColor {
 		/** true -> bright text */
 		bool light;
 
-		/** reset - faster than AnsiColor(AnsiColor::acDefault) */
+		/** The actual string */
+		std::string string_begin;
+
+		/** The actual string */
+		bool have_something;
+
+		/** reset */
 		static const char *reset()
 		{ return AnsiMarker::reset(); }
 
-		/** additional marker */
-		AnsiMarker::Marker mk;
+		/** additional markers */
+		AnsiMarker mk;
 
 		/** Constructor
 		 * @param fg foreground color
 		 * @param light brightness (normal, bright)
 		 * defaults to no color output */
-		AnsiColor(const Color f = acNone, const bool l = false) : fg(f), light(l), mk(AnsiMarker::amNone) {}
+		AnsiColor(const Color f = acNone, const bool l = false) : fg(f), light(l), mk(AnsiMarker::amNone)
+		{ calc_string(); }
 
-		std::string asString()
+		void calc_string()
 		{
-			static const int len = 100;
-			char buf[len];
-			if( fg!=acNone ) {
-				if(fg == acDefault) {
-					snprintf(buf, len, "\x1B[0m\x1B[%dm", int(light));
-				}
-				else {
-					snprintf(buf, len, "\x1B[%d;%dm", int(light), int(fg));
-				}
+			have_something = mk.have_something;
+			if(fg == acNone) {
+				string_begin = mk.asString();
+				return;
 			}
-			else buf[0]='\0';
-			if(mk != AnsiMarker::amNone)
-				return std::string(buf) + AnsiMarker(mk).asString();
-			return std::string(buf);
+			have_something = true;
+			static const int len = 20;
+			char buf[len];
+			if(fg == acDefault)
+				snprintf(buf, len, "\x1B[0m\x1B[%dm", int(light));
+			else
+				snprintf(buf, len, "\x1B[%d;%dm", int(light), int(fg));
+			string_begin = buf;
+			string_begin.append(mk.asString());
 		}
+
+		const std::string &asString() const
+		{ return string_begin; }
 
 		static std::map<std::string,AnsiColor::Color>& init_map_once()
 		{
 			static std::map<std::string,AnsiColor::Color> color_map;
 			color_map["default"] = AnsiColor::acDefault;
+			color_map[""]        = AnsiColor::acDefault;
+			color_map["none"]    = AnsiColor::acNone;
 			color_map["black"]   = AnsiColor::acBlack;
 			color_map["red"]     = AnsiColor::acRed;
 			color_map["green"]   = AnsiColor::acGreen;
@@ -151,65 +200,64 @@ class AnsiColor {
 			return color_map;
 		}
 
-		static Color name_to_color(std::string name)
+		static Color name_to_color(const std::string &name)
 		{
 			static std::map<std::string,AnsiColor::Color> &color_map = init_map_once();
-			return color_map[name];
+			std::map<std::string,AnsiColor::Color>::const_iterator f = color_map.find(name);
+			if(f != color_map.end())
+				return f->second;
+			return acIllegal;
 		}
 
 		/** Prints the current color to an ostream */
 		friend std::ostream& operator<< (std::ostream& os, AnsiColor ac);
 
-		AnsiColor(std::string color_name) throw (ExBasic)
+		AnsiColor(const std::string &color_name) throw (ExBasic)
 		{
 			light = false;
 
 			// look for brightness attribute
-			std::string::size_type comma_pos = color_name.find(',');
-			std::string::size_type resize = comma_pos;
-			if(comma_pos != std::string::npos)
+			std::string::size_type curr = color_name.find_first_of(",;");
+			std::string::size_type resize = curr;
+			if((curr != std::string::npos) && (color_name[curr] == ','))
 			{
-				resize = comma_pos++;
-				if(color_name[comma_pos] == '1') {
+				curr++;
+				if(color_name[curr] == '1') {
 					light = true;
 				}
-				else if(color_name[comma_pos] == '0') {
+				else if(color_name[curr] == '0') {
 					light = false;
 				}
 				else {
 					throw ExBasic("Invalid brightness value %r")
-						% color_name[comma_pos + 1];
+						% color_name[curr];
 				}
+				curr = color_name.find(';', curr);
 			}
-			comma_pos = color_name.rfind(';');
-			if(comma_pos != std::string::npos)
-			{
-				if(resize == std::string::npos)
-					resize = comma_pos;
-				mk = AnsiMarker::name_to_marker(color_name.substr(comma_pos+1));
+			if(curr != std::string::npos)
+				mk.initmarker(color_name.substr(curr + 1));
+			const std::string *pure_color;
+			std::string pure_color_save;
+			if(resize != std::string::npos) {
+				pure_color_save = color_name.substr(0,resize);
+				pure_color = &pure_color_save;
 			}
 			else
-				mk = AnsiMarker::amNone;
-			if(resize != std::string::npos)
-				color_name.resize(resize);
+				pure_color = &color_name;
 
-			fg = name_to_color(color_name);
+			fg = name_to_color(*pure_color);
+			if(fg == acIllegal) {
+				fg = acNone;
+				throw ExBasic("Illegal color name %r %r") % (*pure_color);
+			}
+			calc_string();
 		}
 };
 
 inline std::ostream&
 operator<< (std::ostream& os, AnsiColor ac)
 {
-	if( ac.fg != AnsiColor::acNone )
-	{
-		if( ac.fg== AnsiColor::acDefault )
-			os << "\x1B[0m";
-		os << "\x1B[" << int(ac.light);
-		if( ac.fg!= AnsiColor::acDefault )
-			os << ";" << int(ac.fg);
-		os << 'm';
-	}
-	os << AnsiMarker(ac.mk);
+	os << ac.string_begin;
 	return os;
 }
 
