@@ -113,11 +113,14 @@ trim(std::string *str, const char *delims = " \t\r\n")
 	rtrim(str, delims);
 }
 
+/** Spaces for split strings */
+extern const char *spaces;
+
 /** Split a string into multiple strings.
  * @param str Reference to the string that should be splitted.
  * @param at  Split at the occurrence of any these characters.
  * @return    vector of strings. */
-std::vector<std::string> split_string(const std::string &str, const char *at = " \t\r\n", bool ignore_empty = true, bool ignore_escaped = false, bool remove_escape = false);
+std::vector<std::string> split_string(const std::string &str, const char *at = spaces, bool ignore_empty = true, bool ignore_escaped = false, bool remove_escape = false);
 
 /** Join a string-vector.
  * @param glue glue between the elements. */
